package br.com.caio.padroes.estruturais.decorator;

public interface Component {
    void operation();
}